--- a/public/style/master.css
+++ b/public/style/master.css
@@ -5,7 +5,7 @@
     margin: 0;
     font-weight: bold;
     box-sizing: border-box;
-    font-size: 15px;
+    font-size: 16px;
     background: #000;
     color: rgb(255, 255, 255);
     letter-spacing: 2px;
@@ -40,7 +40,8 @@ p {
 
 #display2 {
     padding: .5em;
-    font-size: 13px;
+    font-size: 12px;
+    color: #ccc;
 }
 
 #keyboard {
