--- a/public/style/master.css
+++ b/public/style/master.css
@@ -5,7 +5,7 @@
     margin: 0;
     font-weight: bold;
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 15px;
     background: #000;
     color: rgb(255, 255, 255);
     letter-spacing: 2px;
@@ -61,7 +61,7 @@ p {
     cursor: pointer;
 }
 
-#clear {
+#clear, #del {
     color: #ff6600;
 }
 
@@ -72,5 +72,5 @@ p {
 #igual {
     color: whitesmoke;
     background: #018b01;
-    width: 40%;
+    width: 83%;
 }
