--- a/public/style/master.css
+++ b/public/style/master.css
@@ -65,7 +65,7 @@ p {
     color: #ff6600;
 }
 
-#porcento, #soma, #menos, #divide, #vezes, #elevado, #delta {
+#porcento, #soma, #menos, #divide, #vezes, #parenteses, #delta {
     color: #04bb04;
 }
 
